knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Practice_Operation_Change__c/Practice_Operation_Change__c.object-meta.xml
<CustomObject>
    <label>Practice Operation Change</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Practice Operation Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>