knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Practice_Operation_Change__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Practice Operation Changes</relationshipLabel>
    <relationshipName>Practice_Operation_Changes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>