knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Practice_Operation_Change__c/fields/Contract_AccountId__c.field-meta.xml
<CustomField>
    <fullName>Contract_AccountId__c</fullName>
    <formula>CASESAFEID(Contract__r.AccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract AccountId</label>
    <type>Text</type>
</CustomField>