knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Practice_Operation_Change__c/fields/Contract_StartDate__c.field-meta.xml
<CustomField>
    <fullName>Contract_StartDate__c</fullName>
    <description>Created as part of US: 3574</description>
    <formula>Contract__r.StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract StartDate</label>
    <type>Date</type>
</CustomField>