knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Practice_Operation_Change__c/fields/Facility_Title__c.field-meta.xml
<CustomField>
    <fullName>Facility_Title__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Title</label>
    <referenceTo>CodeSet</referenceTo>
    <relationshipLabel>Practice Operation Changes</relationshipLabel>
    <relationshipName>Practice_Operation_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>