knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Practice_Operation_Change__c/fields/Qualified_Rules__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Rules__c</fullName>
    <label>Qualified Rules</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>